tests/scripts/parse_errors/function.roto
function foo(x: i32) {
    print(x);
}
